<resources>
    <string name="app_name">SubmissionStoryApp</string>
    <string name="cd_icon_email">Your E-mail Address</string>
    <string name="cd_icon_password">Your Password</string>
    <string name="cd_icon_full_name">Your Full Name</string>
    <string name="cd_icon_re_password">Your Password Again</string>
    <string name="cd_capture_image">Capture Image</string>
    <string name="cd_switch_camera">Switch Camera</string>

    <string name="hint_email">E-Mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_re_password">Re-Password</string>

    <string name="text_sign_in">Sign In</string>
    <string name="text_login_welcome">Welcome to Story Dicoding</string>
    <string name="text_login_decs">Sign in to continue</string>
    <string name="text_register_caption">Let’s Get Started</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_register_desc">Create an new account</string>
    <string name="text_have_a_acc">have a account?</string>
    <string name="text_don_t_have_a_account">Don’t have a account?</string>
    <string name="text_register">Register</string>
    <string name="text_description">Description</string>
    <string name="text_add_story">Add Story</string>
    <string name="text_add_photo">Add Photo</string>
    <string name="text_write_your_story">Write Your Story</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="text_upload">Upload</string>
    <string name="text_preview_image">Preview Image</string>

    <string name="notice_checking_session">Checking Session!</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Google Maps Key</string>

    <string name="error_permission">Error! Permission not granted!</string>
    <string name="error_dialog_alert">Error! Something Wrong!</string>
    <string name="error_data_null">Data Not Found!</string>
    <string name="error_empty_name">Name Must Not Empty</string>
    <string name="error_empty_email">Email Must Not Empty</string>
    <string name="error_format_email">Email Must Match The Format</string>
    <string name="error_empty_password">Password Must Not Empty</string>
    <string name="error_re_password">Password Must Same</string>
    <string name="error_invalid_login">Wrong Email or Password</string>
    <string name="error_char_password">Password Must Exceed 6 Characters</string>
    <string name="error_check_not_valid">Please fill the input correctly</string>
    <string name="success_register">Register Successful</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">logout</string>
    <string name="title">Story App</string>
</resources>