<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.ui.fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/biru_cerah"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/text_sign_up"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/biru_cerah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_edt_repassword"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_edt_fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/abu_abu_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_desc_register"
            app:startIconContentDescription="@string/cd_icon_full_name"
            app:startIconDrawable="@drawable/ic_outline_people_24"
            app:startIconTint="@color/abu_abu_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_full_name"
                android:inputType="textPersonName"
                android:outlineProvider="background"
                android:singleLine="true"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_edt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/abu_abu_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_edt_fullname"
            app:startIconContentDescription="@string/cd_icon_email"
            app:startIconDrawable="@drawable/ic_outline_email_24"
            app:startIconTint="@color/abu_abu_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:outlineProvider="background"
                android:singleLine="true"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_edt_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/abu_abu_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_edt_email"
            app:startIconContentDescription="@string/cd_icon_password"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            app:startIconTint="@color/abu_abu_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:outlineProvider="background"
                android:singleLine="true"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_edt_repassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/abu_abu_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_edt_password"
            app:startIconContentDescription="@string/cd_icon_re_password"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            app:startIconTint="@color/abu_abu_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_re_password"
                android:inputType="textPassword"
                android:outlineProvider="background"
                android:singleLine="true"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="108dp"
            android:layout_height="99dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_biru"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_lets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/text_register_caption"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/text_desc_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_register_desc"
            android:textColor="@color/abu_abu_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_lets"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_have_a_acc"
            android:textAlignment="center"
            android:textColor="@color/abu_abu_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/text_sign_in"
            android:textColor="@color/biru_cerah"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_have_account"
            app:layout_constraintStart_toEndOf="@+id/text_have_account"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>